--- a/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
+++ b/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
@@ -47,7 +47,6 @@
     <Compile Include="Classes\AdException.cs" />
     <Compile Include="Classes\DefaultRoleManager.cs" />
     <Compile Include="Classes\DirectoryEntryObject.cs" />
-    <Compile Include="Classes\OrganizationalUnitObject.cs" />
     <Compile Include="Classes\GroupPrincipalObject.cs" />
     <Compile Include="Classes\PrincipalObject.cs" />
     <Compile Include="Classes\SearchResultsObject.cs" />
@@ -56,6 +55,7 @@
     <Compile Include="Interfaces\IRoleManager.cs" />
     <Compile Include="Runtime\DirectoryEntry.cs" />
     <Compile Include="Runtime\Group.cs" />
+    <Compile Include="Runtime\Computer.cs" />
     <Compile Include="Runtime\OrgUnit.cs" />
     <Compile Include="Runtime\Security.cs" />
     <Compile Include="Runtime\User.cs" />
