- Added Generic "AddToGroup" and "RemoveFromGroup" method that uses DirectoryEntries instead of User and Group Principals. - Changed GroupMembership Plan elements from "Groups" to "MemberOf". - Replaced Specific User/Group to Group Add/Remove methods with generic "AddToGroup" and "RemoveFromGroup" methods.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/AddGroupToGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/AddGroupToGroup.yaml
@@ -31,10 +31,10 @@ Actions:
     Values:
       Groups:
       - Identity: 
-        Groups:
+        MemberOf:
         - 
     Dynamic:
     - Source: identity
       Target: Groups[0]:Identity
-    - Source: groupidentity
-      Target: Groups[0]:Groups[0]:Value
+    - Source: memberof
+      Target: Groups[0]:MemberOf[0]:Value
