- Added Base Code for Computer support through Api. - Added / Tested "GET" Computer in Api.

--- a/Syanpse.Services.ActiveDirectoryApi/Synapse.Services.ActiveDirectoryApi.csproj
+++ b/Syanpse.Services.ActiveDirectoryApi/Synapse.Services.ActiveDirectoryApi.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Computer.cs" />
     <Compile Include="Config\ActiveDirectoryApiConfig.cs" />
     <Compile Include="OrgUnit.cs" />
     <Compile Include="Group.cs" />
