--- a/Synapse.ActiveDirectory.Tests/packages.config
+++ b/Synapse.ActiveDirectory.Tests/packages.config
@@ -3,6 +3,6 @@
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
   <package id="NUnit" version="3.7.0" targetFramework="net452" />
-  <package id="Synapse.Core.Signed" version="1.0.18056" targetFramework="net452" />
+  <package id="Synapse.Core.Signed" version="1.0.18154-pre" targetFramework="net452" />
   <package id="YamlDotNet.Signed" version="4.0.0" targetFramework="net452" />
 </packages>
