--- a/Syanpse.Services.ActiveDirectoryApi/Plans/DisableUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/DisableUser.yaml
@@ -12,7 +12,7 @@ Actions:
         RunSequential: false
         ReturnGroupMembership: false
         OutputType: Json
-        PrettyPrint: true
+        PrettyPrint: false
         ReturnObjects: true
         ReturnObjectProperties: true
         ReturnAccessRules: false
