--- a/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyOrgUnit.yaml
@@ -16,6 +16,7 @@ Actions:
         ReturnObjects: true
         ReturnAccessRules: false
         ReturnObjectProperties: true
+        UseUpsert: false
         SuppressOutput: false
       Dynamic:
       - Source: returngroupmembership
@@ -26,6 +27,8 @@ Actions:
         Target: ReturnObjectProperties
       - Source: returnaccessrules
         Target: ReturnAccessRules
+      - Source: upsert
+        Target: UseUpsert
   Parameters:
     Type: Yaml
     Values:
