Added option to write SearchResults to a file (useful for objects too large to serialize to a string, set ResultsObject to "false").

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/Search.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/Search.yaml
@@ -14,12 +14,20 @@ Actions:
         OutputType: Yaml
         PrettyPrint: true
         SuppressOutput: false
+      Dynamic:
+      - Source: returnobjects
+        Target: ReturnObjects
+      - Source: outputtype
+        Target: OutputType
+      - Source: prettyprint
+        Target: PrettyPrint
   Parameters:
     Type: Yaml
     Values:
       SearchRequests:
       - Filter: xxxxxxxx
         SearchBase: 
+        ResultsFile:
         ReturnAttributes:
         - distinguishedName
         - objectGUID
@@ -28,6 +36,8 @@ Actions:
       Target: SearchRequests[0]:Filter
     - Source: searchbase
       Target: SearchRequests[0]:SearchBase
+    - Source: resultsfile
+      Target: SearchRequests[0]:ResultsFile
     - Source: attributes
       Target: SearchRequests[0]:ReturnAttributes
       Parse: true
