--- a/Syanpse.Services.ActiveDirectoryApi/Plans/CreateGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/CreateGroup.yaml
@@ -23,6 +23,8 @@ Actions:
         Target: ReturnGroupMembership
       - Source: returnobjects
         Target: ReturnObjects
+      - Source: outputtype
+        Target: OutputType
       - Source: returnobjectproperties
         Target: ReturnObjectProperties
       - Source: returnaccessrules
@@ -41,9 +43,7 @@ Actions:
         SamAccountName: 
         ManagedBy: 
         Properties:
-          displayName:
-          mail:
-          info:
+          dummyvalue:
     Dynamic:
     - Source: identity
       Target: Groups[0]:Identity
@@ -60,12 +60,6 @@ Actions:
     - Source: managedby
       Target: Groups[0]:ManagedBy
 # Properties
-    - Source: displayname
-      Target: Groups[0]:Properties:displayName
-      Parse: true
-    - Source: mail
-      Target: Groups[0]:Properties:mail
-      Parse: true
-    - Source: info
-      Target: Groups[0]:Properties:info
+    - Source: properties
+      Target: Groups[0]:Properties
       Parse: true
