--- a/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteOrgUnit.yaml
@@ -18,6 +18,8 @@ Actions:
         Target: ReturnGroupMembership
       - Source: returnobjects
         Target: ReturnObjects
+      - Source: outputtype
+        Target: OutputType
       - Source: returnobjectproperties
         Target: ReturnObjectProperties
       - Source: returnaccessrules
