--- a/Syanpse.Services.ActiveDirectoryApi/Plans/DisableUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/DisableUser.yaml
@@ -23,6 +23,8 @@ Actions:
         Target: ReturnGroupMembership
       - Source: returnobjects
         Target: ReturnObjects
+      - Source: outputtype
+        Target: OutputType
       - Source: returnobjectproperties
         Target: ReturnObjectProperties
       - Source: returnaccessrules
