Added "Manager" field to User object to allow for addition of a manager by identity instead of exclusively by FQDN in the User "Properties" field.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyUser.yaml
@@ -64,6 +64,7 @@ Actions:
         EmployeeId: 
 #       Other Fields and Properties
         Password: 
+        Manager: 
         Properties:
           dummyvalue:
     Dynamic:
@@ -121,6 +122,8 @@ Actions:
 #   Other Fields
     - Source: password
       Target: Users[0]:Password
+    - Source: manager
+      Target: Users[0]:Manager
     - Source: properties
       Target: Users[0]:Properties
       Parse: true
